syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.leodelmiro";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.leodelmiro;

service KeyManagerGrpcService {
  rpc registrarChave (RegistroChaveRequest) returns (RegistroChaveResponse) {}
}

message RegistroChaveRequest {
  string idCliente = 1;
  enum TipoChave {
    CHAVE_DESCONHECIDA = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    ALEATORIA = 4;
  }
  TipoChave tipoChave = 2;
  string chave = 3;
  enum TipoConta {
    CONTA_DESCONHECIDA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
  }
  TipoConta tipoConta = 4;
}

message RegistroChaveResponse {
  string idPix = 1;
  string chavePix = 2;
}